Fix bug of invisible login button on short screens

--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -186,7 +186,7 @@ ul {
 	}
 
 	.jumbotron {
-		height: calc(70vh);
+		min-height: 600px;
 	}
 }
 
